@@ -1,3 +1,12 @@
+*** 19990831_1 by lusky
+bumped patchlevel to b102
+left over aconf->user gets freed twice, causing some malloc packages to leave their lunch all over the disk.... NULL things after every free (db)
+
+
+*** 19990829_1 by lusky
+fix for umode +O (jk)
+
+
 *** 19990826_1 by lusky
 turned on ANTI_DRONE_FLOOD by default
 sync'd config.h.dist
